<resources>
    <string name="app_name">IGenerationMobile</string>
    <string name="IGeneration">IGeneration</string>
    <string name="profile">Профиль</string>
    <string name="empty_email">Поле email или логин не может быть пустым!</string>
    <string name="empty_password">Поле пароль не может быть пустым!</string>
    <string name="InputText">Введите email или логин</string>
    <string name="InputPassword">Введите пароль</string>
    <string name="auth">Авторизация</string>
    <string name="login">Войти</string>
    <string name="error_login">Не верный логин или пароль!</string>
    <string name="contentDescription">TODO</string>
    <string name="FIO">FIO</string>
    <string name="CountProjects">Количество проектов</string>

    <!-- Меню -->
    <string name="profile1">Обзор</string>
    <string name="resume">Профайл</string>
    <string name="rating">Рейтинг</string>
    <string name="options">Настройки</string>
    <string name="projects">Проекты</string>
    <string name="notifications">Уведомления</string>
    <string name="edit">Редактирование</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Рейтинг -->
    <string name="myAchievements">Достижения</string>

    <!-- Настройки -->
    <string name="viewingMode">Режим просмотра</string>

    <!-- Проекты -->
    <string-array name="sessions">
        <item>2020 весна</item>
        <item>2020 осень</item>
        <item>2021 весна</item>
        <item>2021 осень</item>
        <item>2022 весна</item>
        <item>2022 осень</item>
        <item>2023 весна</item>
        <item>2023 осень</item>
        <item>2024 весна</item>
    </string-array>

    <!-- Траектории -->
    <string-array name="trajectory">
        <item>Не выбрано</item>
        <item>Социальный бизнес</item>
        <item>Малый бизнес</item>
        <item>Инновационный бизнес</item>
        <item>Креативные индустрии</item>
        <item>«Я — наставник проекта»</item>
        <item>Акселератор «Импульс»</item>
    </string-array>

    <!-- Меню проекта -->
    <string name="viewProject">Обзор</string>
    <string name="usersProject">Участники</string>
    <string name="trajectoryProject">Траектория</string>

    <!-- Описание проекта (ViewProject) -->
    <string name="created">Создан</string>
    <string name="place">Место</string>
    <string name="ratingProject">Рейтинг</string>
    <string name="description">Описание</string>


    <!-- Меню основной страницы (MainPage) -->
    <string name="allProjects">Проекты</string>
    <string name="allUsers">Участники</string>
    <string name="yourProfile">Профиль</string>
    <string name="yourProjects">Мои проекты</string>


    <string name="send">Вы ничего не меняли</string>
    <string name="success">Данные сохранены!</string>

    <string name="todo">todo</string>

    <string-array name="role">
        <item>Наставник</item>
        <item>Эксперт</item>
        <item>Администратор</item>
        <item>Заказчик</item>
        <item>Не выбрано</item>
    </string-array>

    <string-array name="sort">
        <item>По дате регистрации</item>
        <item>По рейтингу</item>
    </string-array>

    <string name="new_project">Новый проект</string>

    <string name="empty_name_project">Название проекта не может быть пустым!</string>

    <string name="hide_project">Скрыть проект из общего списка</string>
    <string name="confirm_request">Принимать новые заявки</string>
    <string name="wasant">Участвовать в общем рейтинге проектов</string>

    <string name="start_notify">PUSH-уведомления</string>

</resources>