<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/allProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/allProjects"
        android:icon="@drawable/projects"/>
    <item
        android:id="@+id/allUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/allUsers"
        android:icon="@drawable/users_project"/>
    <item
        android:id="@+id/yourProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/yourProfile"
        android:icon="@drawable/baseline_person_24"/>

    <item
        android:id="@+id/yourProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/yourProjects"
        android:icon="@drawable/your_projects_icon"/>
</menu>