<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/IGNColorBackground"
    tools:context=".pages.Profile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/IGNColorBackground"
        android:text="@string/profile"
        android:textColor="@color/IGNColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/fio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/avatar"
        android:textSize="20sp"
        android:textColor="@color/IGNColor"
        android:text="@string/FIO" />

    <TextView
        android:id="@+id/achievements_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar"
        android:text="THING"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/profile"
        android:layout_width="74dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"

        android:text="@string/profile1" />

    <Button
        android:id="@+id/resume"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/profile"
        android:text="@string/resume" />

    <Button
        android:id="@+id/rating"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/resume"
        android:text="@string/rating" />

    <Button
        android:id="@+id/options"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/rating"
        android:text="@string/options" />

    <Button
        android:id="@+id/projects"
        android:layout_width="84dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/options"
        android:text="@string/projects" />

</RelativeLayout>