<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/IGNColorBackground"
        android:text="@string/profile"
        android:textColor="@color/IGNColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <TextView
        android:id="@+id/fio_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/textView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/avatar_new"
        android:textSize="20sp"
        android:textColor="@color/IGNColor"
        android:text="@string/FIO" />

    <TextView
        android:id="@+id/achievements_sum_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar_new"
        android:text="THING"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

</RelativeLayout>