<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.myProject.ViewProject">

    <ImageView
        android:id="@+id/projectImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:src="@mipmap/ic_launcher_round">
    </ImageView>

    <TextView
        android:id="@+id/textCreated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projectImage"
        android:layout_marginTop="15dp"
        android:text="@string/created">
    </TextView>

    <TextView
        android:id="@+id/Created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projectImage"
        android:layout_toEndOf="@+id/textCreated"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="TODO">
    </TextView>

    <TextView
        android:id="@+id/PlaceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textCreated"
        android:layout_marginTop="15dp"
        android:text="@string/place">
    </TextView>

    <TextView
        android:id="@+id/Place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Created"
        android:layout_toEndOf="@+id/textCreated"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="TODO">
    </TextView>

    <TextView
        android:id="@+id/RatingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PlaceText"
        android:layout_marginTop="15dp"
        android:text="@string/ratingProject">
    </TextView>

    <TextView
        android:id="@+id/Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Place"
        android:layout_toEndOf="@+id/textCreated"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:text="TODO">
    </TextView>

</RelativeLayout>