<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pages.EditProjectPage">


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/options"
            android:background="@color/white"

            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="0dp"
                android:padding="15dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/hide_project"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hide_project" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/confirm_request"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_request" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/wasant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wasant" />
                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listTrajectory"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</RelativeLayout>